<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/____12__2_5________2"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:background="#def446"
        android:text="@string/app8"
        android:textColor="#040303"
        android:textColorHighlight="#def446"
        android:textColorLink="#def446"
        app:icon="@drawable/free_icon_plus_sign_button_16057_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:background="#2196F3"
        android:text="@string/app9"
        android:textColor="#1B1616"
        app:icon="@drawable/premium_icon_question_sign_5421645_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button3"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:text="@string/app10"
        android:textColor="#151010"
        app:icon="@drawable/free_icon_user_848043_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="341dp"
        android:layout_height="30dp"
        android:drawableBottom="@drawable/rectangle_8"
        android:text="@string/app11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        tools:ignore="HardcodedText,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="346dp"
        android:layout_height="37dp"
        android:drawableBottom="@drawable/rectangle_8"
        android:text="@string/app12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,UseCompatTextViewDrawableXml" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="342dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/app13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585"
        tools:ignore="Autofill,HardcodedText,LabelFor,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="257dp"
        android:layout_height="61dp"
        android:onClick="onClick"
        android:text="Зарегистрироваться"
        app:icon="@drawable/rectangle_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="377dp"
        android:layout_height="75dp"
        android:text="Соглисен с условиями пользования и политикой конфеденциальности"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903"
        tools:ignore="HardcodedText,TextSizeCheck,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>